src/objects/Risk_Severity__c.object
<CustomObject>
    <description>This is a master object in Quality Central. The severity of event or defect occurring</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provide a detailed description such that ambiguity is eliminated and risk severity levels can be applied uniformly throughout the organization.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Number associated with severity level (not required)</description>
        <externalId>true</externalId>
        <label>Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk Severity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Severity Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Severities</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Severity_Number_Greater_Than_Zero</fullName>
        <active>false</active>
        <errorConditionFormula>Number__c  &gt; 0</errorConditionFormula>
        <errorDisplayField>Number__c</errorDisplayField>
        <errorMessage>Severity Level Number must be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>